return a token from a successful user login [Delivers #166408600]
