# server/middleware/auth/Authenticate.js
@@ -11,28 +11,57 @@ class Authenticate {
    * Generates user tokens
    * @param {int} id
    * @param {string} email
+   * @param {string} userName
    * @returns {string} token
    */
-  static generateToken(id, email) {
+  static generateToken(id, email, userName) {
     const token = jwt.sign(
       {
-        userId: id,
-        email,
+        userId: id, email, userName
       },
       process.env.SECRET_KEY,
       {
-        expiresIn: '7d',
-      },
+        expiresIn: '7d'
+      }
     );
     return token;
   }
 
   /**
-   * Generates user tokens
+   * Verifies user tokens
+   * @param {object} req
+   * @param {object} res
+   * @param {function} next
+   * @returns {void}
+   */
+  static verifyToken(req, res, next) {
+    const token = req.headers.authorization;
+    if (!token) {
+      return res.status(401).json({
+        status: 401,
+        error: 'No Authentication Token Provided.',
+      });
+    }
+
+    try {
+      const decoded = jwt.verify(token, process.env.SECRET_KEY);
+      const { userId, email, userName } = decoded;
+      req.user = { userId, email, userName };
+      next();
+    } catch (e) {
+      return res.status(400).json({
+        status: 400,
+        error: `There was an error authenticating this user. ${e}`
+      });
+    }
+  }
+
+  /**
+   * decodes user tokens
    * @param {string} token
    * @returns {object} decoded
    */
-  static verifyToken(token) {
+  static decodeToken(token) {
     let payload = '';
     jwt.verify(token, process.env.SECRET_KEY, (err, decoded) => {
       payload = decoded;
