# swagger.yaml
@@ -35,19 +35,6 @@ paths:
           in: formData
           type: string
           description: 'username'
-        - name: industry
-          in: formData
-          type: string
-          description: 'user place of work'
-        - name: age
-          in: formData
-          type: integer
-          format: int32
-          description: 'user age'
-        - name: employed
-          in: formData
-          type: boolean
-          description: 'employment status'
         - name: password
           in: formData
           minLength: 8
@@ -87,7 +74,15 @@ paths:
           description: 'user password'
       responses:
         200:
-          description: 'login successful'
+          description: 'status code'
+          schema:
+            type: "object"
+            items:
+              status: 200
+              message: "login was sucessful"
+              $ref: "#/definitions/User" 
+              token: 
+                type: "string" 
   /user/5:
     get:
       description: Get a specific user
@@ -195,6 +190,20 @@ paths:
 tags:
   - name: Users
     description: User routes to signup, login, update and get specific User, reset password
+definitions:
+  User:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      userName:
+        type: "string"
+      firstName:
+        type: "string"
+      lastName:
+        type: "string"
+      email:
+        type: "string"
 
 externalDocs:
   description: 'Find out more about Swagger'
